--- a/package.json
+++ b/package.json
@@ -8,19 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "expo": "~42.0.1",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "expo-svg-uri": "^1.3.1",
+    "puppeteer": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.3.7",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/": "react-navigation/native",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.13",
