--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -13,7 +13,9 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "expo": "~42.0.1",
+    "expo-dev-client": "^0.5.1",
     "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-svg-uri": "^1.3.1",
     "puppeteer": "^10.2.0",
@@ -23,6 +25,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-colors": "^1.4.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
