--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-svg-uri": "^1.3.1",
+    "moti": "^0.14.2",
     "puppeteer": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "16.13.1",
